--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -20,10 +20,44 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 .mainPagPlanets {
-  @apply flex flex-col items-center text-justify;
+  @apply flex flex-col items-center text-justify space-y-10;
 }
 
-.teste {
-  @apply w-[800px] flex flex-col gap-5;
+.h2PagPlanets {
+  @apply text-4xl mt-10 mb-16
+}
+
+.h3PagPlanets {
+  @apply text-3xl text-center mb-3
+}
+
+.mobileTemp {
+  @apply max-[900px]:w-[600px] max-[700px]:w-[300px]
+}
+
+.underlineMod {
+  @apply decoration-AmareloDourado decoration-2 underline-offset-4
+}
+
+
+h2, h3 {
+  color: #8A2BE2;
+}
+
+span {
+  color: #1E90FF;
+}
+
+button {
+  background-color: #8A2BE2;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 2px;
+}
+
+button:hover {
+  background-color: #1E90FF;
 }
