--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -53,11 +53,29 @@ span {
 
 button {
   background-color: #8A2BE2;
-  padding: 5px;
+  height: 36px;
+  padding: 16px 8px;
   border-radius: 5px;
   margin: 2px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button:hover {
   background-color: #1E90FF;
+}
+
+input {
+  height: 36px;
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #A9A9A9;
+  border-radius: 5px;
+  padding: 12px 4px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: var(--foreground);
 }
