--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #000;
+  --foreground: #fff;
 }
 
 @theme inline {
@@ -14,41 +14,21 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-
-
-
-
-
-
-:root {
-  --background: #000;
-  --foreground: #fff;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
     --background: #000;
     --foreground: #A9A9A9;
   }
 }
 
 body {
-  color: var(--foreground);
   background: var(--background);
+  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+.mobile {
+  @apply max-[900px]:w-[600px] max-[700px]:w-[300px]
+}
 
 
 .mainPagPlanets {
@@ -67,9 +47,6 @@ body {
   @apply text-2xl text-center mb-3
 }
 
-.mobileTemp {
-  @apply max-[900px]:w-[600px] max-[700px]:w-[300px]
-}
 
 h1 {
   color: gold;
