--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -15,21 +15,21 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #000;
-    --foreground: #A9A9A9;
+    --foreground: #fff;
   }
 }
 
 body {
-  background: var(--background);
   color: var(--foreground);
+  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.mobile {
-  @apply max-[900px]:w-[600px] max-[700px]:w-[300px]
+.headerTeste {
+  @apply hover:underline decoration-purple-900 decoration-2 underline-offset-4
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator {
+/* input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: #8A2BE2;
   border-radius: 5px;
-}
+} */
