--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -25,9 +25,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.headerTeste {
-  @apply hover:underline decoration-purple-900 decoration-2 underline-offset-4
-}
 
 @keyframes slide-down {
   from {
@@ -42,6 +39,11 @@ body {
 
 .animate-slide-down {
   animation: slide-down 0.3s ease-out;
+}
+
+
+span {
+  color: blue;
 }
 
 
